kubernetes/apps/arr/deployment-prowlarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "opnsense-vpn-vlan",
            "namespace": "kube-system",
            "ips": ["10.0.50.101/24"],
            "default-route": ["10.0.50.1"]
          }]
    spec:
      serviceAccountName: arr
      automountServiceAccountToken: false
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "84.200.69.80"
          - "9.9.9.9"
          - "1.1.1.1"
      hostAliases:
        - ip: 10.43.255.200
          hostnames:
            - "psql-cluster-arr-rw.prod"
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 512Mi
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
      nodeSelector:
        worker: "true"
