kubernetes/apps/arr/deployment-radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "opnsense-vpn-vlan",
            "namespace": "kube-system",
            "ips": ["10.0.50.102/24"],
            "default-route": ["10.0.50.1"]
          }]
    spec:
      serviceAccountName: arr
      automountServiceAccountToken: false
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "84.200.69.80"
          - "9.9.9.9"
          - "1.1.1.1"
      hostAliases:
        - ip: 10.43.255.200
          hostnames:
            - "psql-cluster-arr-rw.prod"
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 512Mi
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: data-nfs
              mountPath: /nfs/data/03_media
              subPath: 03_media

      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: data-nfs
          persistentVolumeClaim:
            claimName: data-nfs-pvc
      nodeSelector:
        worker: "true"
