kubernetes/apps/arr/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbdvpn
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: arr
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: privoxy
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.10.182
  selector:
    app.kubernetes.io/name: arr
  ports:
    - port: 9119
      targetPort: 9119
      protocol: TCP
      name: privoxy-relay
