kubernetes/apps/arr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`sabnzbd.home.lungoo.de`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`prowlarr.home.lungoo.de`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`radarr.home.lungoo.de`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
